# eecs-ulcs-crawler

./: .gitignore  CLAUDE.md  Cargo.toml  week_3_assignment.md  week_4_assignment.md
.claude/: settings.json
.claude/agents/: reviewer.md
api/: CLAUDE.md  Cargo.toml
api/src/: main.rs
common/: Cargo.toml
common/src/: document.rs  error.rs  lib.rs
crawler/: Cargo.toml
crawler/src/: crawler.rs  lib.rs  main.rs
data/: courses.json
frontend/: next.config.js  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
indexer/: CLAUDE.md  Cargo.toml
indexer/src/: index.rs  lib.rs  main.rs
