[workspace]
resolver = "2"
members = [
    "common",
    "indexer",
    "crawler",
    "api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Arleen Cheema"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "1"
reqwest    = { version = "0.12", features = ["blocking", "json"] }
scraper    = "0.21"
serde_json  = "1"
regex       = "1"
axum        = "0.7"
tower-http  = { version = "0.5", features = ["cors"] }

# Internal crates
common  = { path = "common" }
indexer = { path = "indexer" }
crawler = { path = "crawler" }
api     = { path = "api" }
