[package]
name = "api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
common     = { workspace = true }
indexer    = { workspace = true }
crawler    = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
axum       = { workspace = true }
tower-http = { workspace = true }
