[package]
name = "indexer"
version.workspace = true
edition.workspace = true

[lib]
name = "indexer"
path = "src/lib.rs"

[[bin]]
name = "indexer"
path = "src/main.rs"

[dependencies]
common  = { workspace = true }
tokio   = { workspace = true }
serde   = { workspace = true }
anyhow  = { workspace = true }
